# minillama-inference-lab

./: .gitignore  CLAUDE.md
minillama-inference-lab/: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
minillama-inference-lab/.claude/skills/implement-milestone/: SKILL.md
minillama-inference-lab/api/: inference_service.py  main.py  schemas.py
minillama-inference-lab/benchmarks/: benchmark_gqa_vs_mha.py  benchmark_kv_cache.py
minillama-inference-lab/benchmarks/results/: gqa_vs_mha_benchmark.json  kv_cache_benchmark.json
minillama-inference-lab/minillama/: __init__.py  attention.py  block.py  config.py  feedforward.py  generation.py  model.py  rmsnorm.py  rope.py
minillama-inference-lab/scripts/: run_generate.py
minillama-inference-lab/tests/: test_milestone1.py  test_milestone2.py  test_milestone4.py
